Added jsfiddle link to README

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-A quick demo of creating pure CSS3 buttons using some of SASS features
+A quick demo of creating pure CSS3 buttons using some of SASS features.
+See live demo of result at http://jsfiddle.net/dipish/wKsGN/ (may be not up to date).
